# WriteViT-Kuzushiji

./: .gitignore  LICENSE  README.md  infer_kuzushiji_column.py  params.py  pyproject.toml  requirements.txt  train.py
File/: README.md  kuzushiji_column_texts.txt
cuda_extensions/: ink_density.cu
data/: dataset.py
models/: Generator.py  Unifront.py  backbone.py  model.py  recognizer.py
scripts/: evaluate_kuzushiji_column.py  phase5.py  profile_training.py
util/: fused_ink_density.py  gan_augment.py  util.py
