[project]
name = "writevit-kuzushiji"
version = "0.1.0"
description = "WriteViT experiments for Kuzushiji COCO column-level generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "huggingface-hub>=0.32.0",
    "numpy>=1.26",
    "opencv-python>=4.10",
    "pillow>=10.4",
    "six>=1.16",
    "timm>=1.0.15",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "torchvision==0.22.0",
    "tqdm>=4.66",
    "wandb>=0.17",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "platform_system == 'Linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "platform_system == 'Linux'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
